Attempt 2 to fix maze not showing up in safari

--- a/css/main.css
+++ b/css/main.css
@@ -119,18 +119,13 @@ p {
 
 /* css for maze */
 #maze {
+    display: block;
     opacity: 0;
     transition: opacity 0.25s ease;
     border: 5px solid white;
     background: black;
     margin-left: auto;
     margin-right: auto;
-    display: -webkit-box; /* Flex for all browsers */
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: column;
 }
 
 div.maze-row {
